# tools

DevSetup/: Helloword  Helloword.c  Makefile  config  install.sh  install_ubuntu.sh  limits.conf  smb.conf
cloudmanager_ha/: .create_cloudmanager_conf.sh.swp  cloudmanager_ha  cloudmanager_ha_client.py  cloudmanager_ha_conf.sh  cloudmanager_ha_server.py  com_logger.py  create_cloudmanager_conf.sh  create_keepalived_conf.sh  create_mysql_conf.sh  init_ha.py  init_ha.sh  logger.sh  modify_mysql_cloudmanager.sh  mysql_info.out  sn.exp  sync_mysql.py  sync_mysql.sh
cloudmanager_ha/conf/: db.properties  keepalived.conf  my.cnf
cloudmanager_ha/script/: check_cloudmanager_status.sh  notify.sh  realserver.sh
helloworld/: CMakeLists.txt  Makefile  ProjectMetadata.cmake  readme
helloworld/cmake/: rules.cmake  toolchain_hisiv200.cmake
helloworld/src/: main.cpp
